--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SANtricity-SMcli
-version:      0.01
-version_from: lib/SMcli.pm
+version:      0.02
+version_from: lib/SANtricity/SMcli.pm
 installdirs:  site
 requires:
 
